# mc504

./: engines.txt
projeto1/: Bus.cpp  Bus.h  BusShape.cpp  BusShape.h  BusStatus.h  CMakeCache.txt  CMakeLists.txt  Dot.cpp  Dot.h  LTexture.cpp  LTexture.h  LTimer.cpp  LTimer.h  Makefile  Rider.cpp  Rider.h  RiderShape.cpp  RiderShape.h  RiderStatus.h  Shape.h  Street.cpp  Street.h  Worker.cpp  Worker.h  cmake_install.cmake  constants.h  fork.c  fork_1.c  fork_2.c  libs.txt  main.c  main.cpp  projeto1  projeto1.cbp
projeto1/examples/: semaphore.cpp  texture.cpp
projeto2/: CMakeLists.txt  Makefile  README.md  build.sh  qotdfs.c
